syntax = "proto3";

package user;

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  string id = 1;
  string name = 2;
  optional string avatar_url = 3;
}

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}